--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,43 @@
   <groupId>to.uk.paul</groupId>
   <artifactId>EmoteSelector</artifactId>
   <version>0.0.1-DEVEL</version>
+  <dependencies>
+    <dependency>
+      <groupId>lc.kra.system</groupId>
+      <artifactId>system-hook</artifactId>
+      <version>3.2</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/system-hook-3.2.jar</systemPath>
+    </dependency>
+  </dependencies>
+  <build>
+        <finalName>emotepicker</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>package-jar-with-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                            <archive>
+                                <manifest>
+                                    <mainClass>to.uk.paul.emotepicker.EmotePicker</mainClass>
+                                </manifest>
+                            </archive>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+</build>
 </project>
